--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -31,20 +31,6 @@
         
         <Button Text="Iniciar Sesión" Clicked="OnLoginClicked" />
         <Button Text="Registrarse" Clicked="OnRegisterClicked" />
+        <Button Text="Pagina de Registro" Clicked="OnPageRegisterClicked" />
     </StackLayout>
 </ContentPage>
-
-
-<!-- Views/LoginPage.xaml -->
-<!-- <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TapPay.Views.LoginPage"
-             Title="Login">
-    <StackLayout Padding="30">
-        <Entry Text="carlos.gomez@gmail.com" Placeholder="Correo Electrónico" x:Name="EmailEntry" />
-
-        <Entry Text="password123" Placeholder="Contraseña" IsPassword="True" x:Name="PasswordEntry"/>
-        <Button Text="Iniciar Sesión" Clicked="OnLoginClicked" />
-        <Button x:Name="TogglePasswordButton" Text="Mostrar" Clicked="OnTogglePasswordButtonClicked"/>
-    </StackLayout>
-</ContentPage> -->
