agregamos un metodo para que cuando se hace un registro a la base de datos se vea reflejando instaniamente

--- a/Views/ALL_Register_Pages/RegisterPage.xaml
+++ b/Views/ALL_Register_Pages/RegisterPage.xaml
@@ -7,8 +7,8 @@
         <Label Text="Que Desea Registrar"/>
         
         
-        
+<!--         
         <Button Text="Registrar un Nuevo organizador" Clicked="OnNewOrganizadorClicked" />
-        <Button Text="Registrar un Nuevo Evento" Clicked="OnNewEventoClicked" />
+        <Button Text="Registrar un Nuevo Evento" Clicked="OnNewEventoClicked" /> -->
     </StackLayout>
 </ContentPage>
