--- a/Views/DATA_VIEWS/EventoView.xaml
+++ b/Views/DATA_VIEWS/EventoView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TapPay.Views.EventoView"
-             Title="Organizadores">
+             Title="Eventos">
     <ScrollView>
         <StackLayout Padding="10">
         <Grid>
