--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -31,6 +31,6 @@
         
         <Button Text="Iniciar Sesión" Clicked="OnLoginClicked" />
         <Button Text="Registrarse" Clicked="OnRegisterClicked" />
-        <Button Text="Pagina de Registro" Clicked="OnPageRegisterClicked" />
+        <!-- <Button Text="Pagina de Registro" Clicked="OnPageRegisterClicked" /> -->
     </StackLayout>
 </ContentPage>
