agregamos la pagina de visualicacion de los productos que estan en la base de datos asi como tambien la logica backend y el frotend para agregar un nuevo producto.😁

--- a/Views/DATA_VIEWS/EventoView.xaml
+++ b/Views/DATA_VIEWS/EventoView.xaml
@@ -94,7 +94,7 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
             <!-- AQUI TERMINA EL CODIGO PARA LOS DATOS DE EVENTOS -->        
-
+            <ActivityIndicator x:Name='LoadingIndicator' IsRunning='False' IsVisible='False' />
            
         </StackLayout>
     </ScrollView>
