--- a/Views/ALL_Register_Pages/ADD_Evento.xaml
+++ b/Views/ALL_Register_Pages/ADD_Evento.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TapPay.Views.ADD_Evento"
-             Title="Registrar un Nuevo Eventos">
+             Title="Registrar un Nuevo Evento">
     <ScrollView>
         <StackLayout Padding="30"
                 Spacing="30">
