--- a/Views/DATA_VIEWS/OrganizadorView.xaml
+++ b/Views/DATA_VIEWS/OrganizadorView.xaml
@@ -5,27 +5,48 @@
              Title="Organizadores">
     <ScrollView>
         <StackLayout Padding="10">
-        <Grid>
-        <Button Text="Eliminar" MaximumWidthRequest="100" HorizontalOptions="Start"/>
-        <Button Text="Editar" MaximumWidthRequest="100" HorizontalOptions="Center"/>
-        <Button Text="Agregar" MaximumWidthRequest="100" HorizontalOptions="End" Clicked="OnAgregarOrganizadorClicked"/>
-        </Grid>
-        
+            <Grid>
+                <Button Text="Eliminar"
+                        MaximumWidthRequest="100"
+                        HorizontalOptions="Start"/>
+                <Button Text="Editar"
+                        MaximumWidthRequest="100"
+                        HorizontalOptions="Center"/>
+                <Button Text="Agregar"
+                        MaximumWidthRequest="100"
+                        HorizontalOptions="End"
+                        Clicked="OnAgregarOrganizadorClicked"/>
+            </Grid>
 
-           <CollectionView x:Name="OrganizadoresCollectionView">
+
+            <CollectionView x:Name="OrganizadoresCollectionView">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Frame BorderColor="LightGray" CornerRadius="5" Padding="5" Margin="13" BackgroundColor="Black">
+                        <Frame BorderColor="LightGray"
+                               CornerRadius="3"
+                               Padding="5"
+                               Margin="7"
+                               BackgroundColor="Black"
+                               VerticalOptions="FillAndExpand"
+                               HorizontalOptions="FillAndExpand">
                             <StackLayout>
-                                <Label Text="{Binding Nombre}" FontAttributes="Bold" FontSize="18"/>
-                                <Label Text="{Binding CorreoElectronico}" FontSize="14"/>
-                                <Label Text="{Binding Telefono}" FontSize="14"/>
+                                <Label Text="{Binding Nombre}"
+                                       FontAttributes="Bold"
+                                       FontSize="18"/>
+                                <BoxView Color="Gray"
+                                         HeightRequest="2"
+                                         HorizontalOptions="Fill"/>
+                                <Label Text="{Binding CorreoElectronico}"
+                                       FontSize="14"/>
+                                <Label Text="{Binding Telefono}"
+                                       FontSize="14"/>
                             </StackLayout>
                         </Frame>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
             <!-- AQUI TERMINA EL CODIGO PARA LOS DATOS DE ORGANIZADORES -->
+            <ActivityIndicator x:Name='LoadingIndicator' IsRunning='False' IsVisible='False' />
         </StackLayout>
     </ScrollView>
 </ContentPage>
